[package]
name = "xionhub-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.5.2"
cosmwasm-std = "1.5.2"
cw-storage-plus = "1.2.0"
schemars = "0.8.16"
serde = { version = "1.0.195", features = ["derive"] }
cw-multi-test = { version = "0.20.0", optional = true }
thiserror = "1.0.56"

[dev-dependencies]
uuid = { version = "1.7.0", features = ["v4"] }
cw-multi-test = "0.20.0"
